--- a/addCategory.html
+++ b/addCategory.html
@@ -5,7 +5,7 @@
   <title>Webjump | Backend Test | Add Category</title>
   <meta charset="utf-8">
 
-<link  rel="stylesheet" type="text/css"  media="all" href="css/style.css" />
+<link  rel="stylesheet" type="text/css"  media="all" href="assets/css/style.css" />
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
 <meta name="viewport" content="width=device-width,minimum-scale=1">
 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
@@ -16,10 +16,10 @@
 <amp-sidebar id="sidebar" class="sample-sidebar" layout="nodisplay" side="left">
   <div class="close-menu">
     <a on="tap:sidebar.toggle">
-      <img src="images/bt-close.png" alt="Close Menu" width="24" height="24" />
+      <img src="assets/images/bt-close.png" alt="Close Menu" width="24" height="24" />
     </a>
   </div>
-  <a href="dashboard.html"><img src="images/menu-go-jumpers.png" alt="Welcome" width="200" height="43" /></a>
+  <a href="dashboard.html"><img src="assets/images/menu-go-jumpers.png" alt="Welcome" width="200" height="43" /></a>
   <div>
     <ul>
       <li><a href="categories.html" class="link-menu">Categorias</a></li>
@@ -30,7 +30,7 @@
 <header>
   <div class="go-menu">
     <a on="tap:sidebar.toggle">☰</a>
-    <a href="dashboard.html" class="link-logo"><img src="images/go-logo.png" alt="Welcome" width="69" height="430" /></a>
+    <a href="dashboard.html" class="link-logo"><img src="assets/images/go-logo.png" alt="Welcome" width="69" height="430" /></a>
   </div>
   <div class="right-box">
     <span class="go-title">Administration Panel</span>
@@ -56,6 +56,11 @@
         <a href="categories.html" class="action back">Back</a>
         <input class="btn-submit btn-action"  type="submit" value="Save" />
       </div>
+
+      <div id="response">
+        <p class="alert"></p>
+        <p class="success"></p>
+      </div>
     </form>
   </main>
   <!-- Main Content -->
@@ -63,11 +68,49 @@
   <!-- Footer -->
 <footer>
 	<div class="footer-image">
-	  <img src="images/go-jumpers.png" width="119" height="26" alt="Go Jumpers" />
+	  <img src="assets/images/go-jumpers.png" width="119" height="26" alt="Go Jumpers" />
 	</div>
 	<div class="email-content">
 	  <span>go@jumpers.com.br</span>
 	</div>
 </footer>
- <!-- Footer --></body>
+ <!-- Footer -->
+
+
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+ <script>
+   $(document).ready(function() {
+
+     function validateForm() {
+       if ( $('#category-name').val() == '') {
+         return false;
+       }
+     }
+
+    $('form').submit(function() {
+      //validateForm();
+
+      var catName = $('#category-name').val();
+      var catCode = $('#category-code').val();
+
+      var request = $.ajax({
+			  url: "php_actions/add_category.php",
+			  method: "POST",
+        data: {name: catName, code: catCode},
+			  dataType: "html"
+			});
+			 
+			request.done(function( msg ) {
+			  $( "#response" ).html( msg );
+			  $( "#response" ).slideDown();
+			});
+
+      console.log('categoria', catName);
+
+      return false;      
+    });
+
+   });
+ </script>
+</body>
 </html>
