--- a/addProduct.html
+++ b/addProduct.html
@@ -5,7 +5,7 @@
   <title>Webjump | Backend Test | Add Product</title>
   <meta charset="utf-8">
 
-<link  rel="stylesheet" type="text/css"  media="all" href="css/style.css" />
+<link  rel="stylesheet" type="text/css"  media="all" href="assets/css/style.css" />
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
 <meta name="viewport" content="width=device-width,minimum-scale=1">
 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
@@ -16,10 +16,10 @@
 <amp-sidebar id="sidebar" class="sample-sidebar" layout="nodisplay" side="left">
   <div class="close-menu">
     <a on="tap:sidebar.toggle">
-      <img src="images/bt-close.png" alt="Close Menu" width="24" height="24" />
+      <img src="assets/images/bt-close.png" alt="Close Menu" width="24" height="24" />
     </a>
   </div>
-  <a href="dashboard.html"><img src="images/menu-go-jumpers.png" alt="Welcome" width="200" height="43" /></a>
+  <a href="dashboard.html"><img src="assets/images/menu-go-jumpers.png" alt="Welcome" width="200" height="43" /></a>
   <div>
     <ul>
       <li><a href="categories.html" class="link-menu">Categorias</a></li>
@@ -30,7 +30,7 @@
 <header>
   <div class="go-menu">
     <a on="tap:sidebar.toggle">☰</a>
-    <a href="dashboard.html" class="link-logo"><img src="images/go-logo.png" alt="Welcome" width="69" height="430" /></a>
+    <a href="dashboard.html" class="link-logo"><img src="assets/images/go-logo.png" alt="Welcome" width="69" height="430" /></a>
   </div>
   <div class="right-box">
     <span class="go-title">Administration Panel</span>
@@ -44,36 +44,43 @@
     <form>
       <div class="input-field">
         <label for="sku" class="label">Product SKU</label>
-        <input type="text" id="sku" class="input-text" /> 
+        <input type="text" id="sku" class="input-text" value="456"/> 
       </div>
       <div class="input-field">
         <label for="name" class="label">Product Name</label>
-        <input type="text" id="name" class="input-text" /> 
+        <input type="text" id="name" class="input-text" value="Ombro"/> 
       </div>
       <div class="input-field">
         <label for="price" class="label">Price</label>
-        <input type="text" id="price" class="input-text" /> 
+        <input type="text" id="price" class="input-text" value="35"/> 
       </div>
       <div class="input-field">
         <label for="quantity" class="label">Quantity</label>
-        <input type="text" id="quantity" class="input-text" /> 
+        <input type="text" id="quantity" class="input-text" value="10"/> 
       </div>
       <div class="input-field">
         <label for="category" class="label">Categories</label>
         <select multiple id="category" class="input-text">
-          <option>Category 1</option>
-          <option>Category 2</option>
-          <option>Category 3</option>
-          <option>Category 4</option>
+          <option value="1">Category 1</option>
+          <option value="2">Category 2</option>
+          <option value="3">Category 3</option>
+          <option value="4">Category 4</option>
         </select>
       </div>
       <div class="input-field">
         <label for="description" class="label">Description</label>
-        <textarea id="description" class="input-text"></textarea>
+        <textarea id="description" class="input-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+        </textarea>
       </div>
       <div class="actions-form">
         <a href="products.html" class="action back">Back</a>
         <input class="btn-submit btn-action" type="submit" value="Save Product" />
+      </div>
+
+      <div id="response">
+        <p class="alert"></p>
+        <p class="success"></p>
       </div>
       
     </form>
@@ -83,11 +90,51 @@
   <!-- Footer -->
 <footer>
 	<div class="footer-image">
-	  <img src="images/go-jumpers.png" width="119" height="26" alt="Go Jumpers" />
+	  <img src="assets/images/go-jumpers.png" width="119" height="26" alt="Go Jumpers" />
 	</div>
 	<div class="email-content">
 	  <span>go@jumpers.com.br</span>
 	</div>
 </footer>
- <!-- Footer --></body>
+ <!-- Footer -->
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+ <script>
+   $(document).ready(function() {
+
+    $('form').submit(function() {
+
+      console.log('chama salva e mostra loading');
+
+      const name = $('#name').val();
+      const sku = $('#sku').val();
+      const price = $('#price').val();
+      const desc = $('#description').val();
+      const qtd = $('#quantity').val();
+      const categories = $('#category').val();
+
+      const request = $.ajax({
+			  url: "php_actions/add_product.php",
+			  method: "POST",
+        data: {
+         name: name,
+         sku: sku,
+         price: price,
+         desc: desc,
+         qtd: qtd,
+         cats: categories
+         },
+			  dataType: "html"
+			});
+			 
+			request.done(function( msg ) {
+			  $( "#response" ).html( msg );
+			  $( "#response" ).slideDown();
+			});     
+
+      return false;      
+    });
+
+   });
+ </script>
+</body>
 </html>
