--- a/addProduct.html
+++ b/addProduct.html
@@ -23,7 +23,7 @@
   <div>
     <ul>
       <li><a href="categories.html" class="link-menu">Categorias</a></li>
-      <li><a href="products.html" class="link-menu">Produtos</a></li>
+      <li><a href="index.html" class="link-menu">Produtos</a></li>
     </ul>
   </div>
 </amp-sidebar>
@@ -74,7 +74,7 @@
         </textarea>
       </div>
       <div class="actions-form">
-        <a href="products.html" class="action back">Back</a>
+        <a href="index.html" class="action back">Back</a>
         <input class="btn-submit btn-action" type="submit" value="Save Product" />
       </div>
 
