--- a/categories.html
+++ b/categories.html
@@ -23,7 +23,7 @@
   <div>
     <ul>
       <li><a href="categories.html" class="link-menu">Categorias</a></li>
-      <li><a href="products.html" class="link-menu">Produtos</a></li>
+      <li><a href="index.html" class="link-menu">Produtos</a></li>
     </ul>
   </div>
 </amp-sidebar>
